[package]
name = "janus-oxide"
version = "0.1.0"
authors = ["dougli1sqrd <dougli1sqrd+git@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxigraph = {git = "https://github.com/oxigraph/oxigraph.git", rev = "8fdf1b4", version = "0.2.1", features = ["sled", "sophia"]}
rocket = "0.4.6"
rocket_contrib = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10"
unicase = "2.6"
sophia_api = "0.6"
strum = "0.20"
strum_macros = "0.20"
tempfile = "3.2.0"